# Jinja

./: .gitignore  ARCHITECTURE.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  FINAL_RESULTS.md  PHASE_3_COMPLETE.md  PRESENTATION_DECK.md  PROJECT_STATUS.md  README.md  REAL_PROTEIN_TEST.md  SETUP_HF.md  compare_proteins.py  demo.py  pyproject.toml  requirements.txt  test_real_protein.py  validate_three_proteins.py
analysis/: README.md  aimmd_reweighting.py  allosteric_site_discovery.py  run_analysis.sh  visualize_results.py
committor_training/: README.md  analyze_backbone_committor.py  compare_committor_models.py  config_bionemo_backbone_committor.yaml  evaluate_bionemo_backbone_committor.py  evaluate_committor.py  path_atlas_dataset_with_structure_tokens.py  run_distributed_backbone_committor.sh  run_training.sh  train_bionemo_backbone_committor_torchrun.py  train_committor.py
enhanced_path_generation/: create_path_atlas_backbone.py  extract_coordinates.py  generate_barrier_samples_backbone.py  generate_paths_backbone.py  improved_matching.py  run_distributed_tokenization.sh  sample_wells_backbone.py  tokenize_atlas_backbone_simple_distributed.py
sagemaker/: deploy_endpoint.py  train_committor.py  train_sagemaker.py
scripts/: deploy_esm3_endpoint.py  sync_from_s3.sh
utils/: __init__.py  bedrock_agent.py  bedrock_client.py
web_demo/: index.html
